deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rms-edge
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: rms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rms-api-gateway
                port:
                  number: 8080
    - host: ops.rms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rms-admin-dashboard
                port:
                  number: 80
